--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="./images/dp.png" alt="" width="170"></td>
+      <td><img src="./Images/dp.png" alt="" width="170"></td>
       <td>
         <h1>Salami Adeola</h1>
         <p></strong>CEO and CTO of Headbanger Inc</strong></p>
